infrastructure/k8s/api-gateway-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-gateway-deployment
spec:
  selector:
    matchLabels:
      app: api-gateway
  template:
    metadata:
      labels:
        app: api-gateway
    spec:
      containers:
      - name: api-gateway-container
        image: amrmonier/api-gateway

---
apiVersion: v1
kind: Service
metadata:
  name: api-gateway-cluster-ip-srv
spec:
  selector:
    app: api-gateway
  ports:
  - name: api-gateway
    protocol: TCP
    port: 3001
    targetPort: 3001
