infrastructure/k8s/api-gateway-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-gateway-service
spec:
  type: NodePort
  selector:
    app: api-gateway
  ports:
  - name: api-gateway
    protocol: TCP
    port: 4000
    targetPort: 4000
