infrastructure/k8s/client-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: client
  template:
    metadata:
      labels:
        app: client
    spec:
      containers:
        - name: client-container
          image: amrmonier/client
---
apiVersion: v1
kind: Service
metadata:
  name: client-cluster-ip-srv
spec:
  type: ClusterIP
  selector:
    app: client
  ports:
  - name: client
    protocol: TCP
    port: 4000
    targetPort: 4000
---
apiVersion: v1
kind: Service
metadata:
  name: client-service
spec:
  type: NodePort
  selector:
    app: client
  ports:
  - name: client
    protocol: TCP
    port: 4000
    targetPort: 4000
