infrastructure/k8s/moderation-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: moderation-deployment
spec:
  selector:
    matchLabels:
      app: moderation
  template:
    metadata:
      labels:
        app: moderation
    spec:
      containers:
      - name: moderation-container
        image: amrmonier/moderation-service

---
apiVersion: v1
kind: Service
metadata:
  name: moderation-cluster-ip-srv
spec:
  selector:
    app: moderation
  ports:
  - name: moderation
    protocol: TCP
    port: 3004
    targetPort: 3004
