infrastructure/k8s/query-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: query-deployment
spec:
  selector:
    matchLabels:
      app: query
  template:
    metadata:
      labels:
        app: query
    spec:
      containers:
      - name: query-container
        image: amrmonier/query-service

---
apiVersion: v1
kind: Service
metadata:
  name: query-cluster-ip-srv
spec:
  selector:
    app: query
  ports:
  - name: query
    protocol: TCP
    port: 3003
    targetPort: 3003
